--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
   },
   "dependencies": {
     "express": "^4.16.3",
+    "hoek": "^5.0.3",
     "react-favicon": "0.0.14",
     "react-helmet": "^5.2.0"
   }
