--- a/package.json
+++ b/package.json
@@ -52,6 +52,9 @@
     "express": "^4.16.3",
     "hoek": "^5.0.3",
     "react-favicon": "0.0.14",
-    "react-helmet": "^5.2.0"
+    "react-helmet": "^5.2.0",
+    "react-particles-js": "^2.3.0",
+    "react-scrollable-anchor": "^0.6.1",
+    "roboto-fontface": "^0.9.0"
   }
 }
