--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
   "dependencies": {
     "express": "^4.16.3",
     "hoek": "^5.0.3",
+    "react-anchor-link-smooth-scroll": "^1.0.10",
     "react-favicon": "0.0.14",
     "react-helmet": "^5.2.0",
     "react-particles-js": "^2.3.0",
