--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react-helmet": "^5.2.0",
     "react-particles-js": "^2.3.0",
     "react-scrollable-anchor": "^0.6.1",
+    "react-svg-loader": "^2.1.0",
     "roboto-fontface": "^0.9.0"
   }
 }
