--- a/package.json
+++ b/package.json
@@ -47,9 +47,11 @@
     "webpack-merge": "^4.1.3"
   },
   "dependencies": {
+    "clean-webpack-plugin": "^0.1.19",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "hoek": "^5.0.3",
+    "html-webpack-exclude-empty-assets-plugin": "^0.1.1",
     "react-anchor-link-smooth-scroll": "^1.0.10",
     "react-favicon": "0.0.14",
     "react-helmet": "^5.2.0",
