--- a/package.json
+++ b/package.json
@@ -41,10 +41,18 @@
     "react-router-dom": "^4.3.1",
     "sass-loader": "^7.0.3",
     "style-loader": "^0.21.0",
-    "webpack": "^4.16.3",
+    "webpack": "^4.16.2",
     "webpack-cli": "^3.1.0",
     "webpack-dev-server": "^3.1.5",
-    "webpack-merge": "^4.1.3"
+    "webpack-merge": "^4.1.3",
+    "dotenv": "^6.0.0",
+    "eslint-plugin-react": "^7.10.0",
+    "file-loader": "^1.1.11",
+    "prop-types": "^15.6.2",
+    "react-redux": "^5.0.7",
+    "react-svg-loader": "^2.1.0",
+    "redux": "^4.0.0",
+    "redux-devtools-extension": "^2.13.5"
   },
   "dependencies": {
     "clean-webpack-plugin": "^0.1.19",
@@ -57,6 +65,8 @@
     "react-particles-js": "^2.3.0",
     "react-scrollable-anchor": "^0.6.1",
     "react-svg-loader": "^2.1.0",
-    "roboto-fontface": "^0.9.0"
+    "roboto-fontface": "^0.9.0",
+    "@material-ui/core": "^1.4.1",
+    "superagent": "^3.8.3"
   }
 }
