--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "eslint . && jest --coverage",
     "watch": "webpack-dev-server --config webpack.dev.js",
     "pack": "webpack --config webpack.prod.js",
+    "heroku-postbuild": "webpack --progress --config webpack.prod.js",
     "start": "node index.js"
   },
   "repository": {
